tests/bad/l-value-used.go
package main
import "fmt"

func main() {
    var a = 3
    a = 2
    fmt.Print(a)
    a = 3
}
